--- a/elections_france_cartograms.Rmd
+++ b/elections_france_cartograms.Rmd
@@ -8,6 +8,7 @@ library(sp)
 library(rgdal)
 library(dplyr)
 library(tidyr)
+library(stringr)
 library(gridExtra)
 
 library(RColorBrewer)
@@ -29,6 +30,9 @@ pathToShp_dept <- "data/GEOFLA_DEPT/1_DONNEES_LIVRAISON_2016-06-00235/GEOFLA_2-2
 df.elections_2017_departements<-read.csv('data/DOI/pres_1erTour_2017_par_departement_candidat.csv')
 df.elections_2017_departements<-df.elections_2017_departements %>%  mutate(CODE_DEPT=str_pad(Code.du.département, 2, pad = "0"))
 df.elections_2017_departements$CODE_DEPT<- as.factor(df.elections_2017_departements$CODE_DEPT)
+ratio_cols <- grep('ratio',colnames(df.elections_2017_departements))
+df.elections_2017_departements <- df.elections_2017_departements %>% mutate_at(ratio_cols, funs(percent = round(.*100,0)))
+
 ```
 # Lecture des pays et sélection de l'Europe
 ```{r}
@@ -65,189 +69,23 @@ str(departements@data)
 # construct cartogram
 dept_cartogram <- cartogram(departements, "Exprimés_total_voix", itermax=5)
 
-# plot it
-tm_shape(dept_cartogram) + tm_fill("LE.PEN_ratio_voix", style="quantile",palette="Blues") + 
-  tm_borders() + tm_layout(frame=F)
-
-# plot it
-tm_shape(dept_cartogram) + tm_fill("MACRON_ratio_voix", style="quantile",palette="Blues") + 
-  tm_borders() + tm_layout(frame=F)
-
 ```
 
-# Fill empty zones with means :
 ```{r}
-
-library(cartogram)
-library(tmap)
-library(maptools)
-
-data(wrld_simpl)
-
-afr <- wrld_simpl[wrld_simpl$REGION==2,]
-afr <- spTransform(afr, CRS("+init=epsg:3395"))
-
-# construct cartogram
-afrc <- cartogram(afr, "POP2005", itermax=5)
+# plot it
+tm_shape(dept_cartogram) + tm_fill("LE.PEN_ratio_voix_percent", style="quantile",palette="Reds" ,title = "LE PEN (%)") + 
+  tm_borders() + tm_layout(frame=F)+ tm_credits("Related to population - Data @ Ministère de l'Intérieur", position = c("right", "bottom")) +tm_layout(title="First round", 
+	title.position = c("left", "top"), 
+	legend.position = c("left", "bottom"), 
+	frame = FALSE, 
+	inner.margins = c(0.1, 0.1, 0.05, 0.05))
 
 # plot it
-tm_shape(afrc) + tm_fill("POP2005", style="jenks") + 
-  tm_borders() + tm_layout(frame=F)
-
-
+tm_shape(dept_cartogram) + tm_fill("MACRON_ratio_voix_percent", style="quantile",palette="Blues", title = "MACRON (%)") + 
+  tm_borders() + tm_layout(frame=F)+tm_credits("Related to population - Data @ Ministère de l'Intérieur", position = c("right", "bottom"))  +tm_layout(title="First round", 
+	title.position = c("left", "top"), 
+	legend.position = c("left", "bottom"), 
+	frame = FALSE, 
+	inner.margins = c(0.1, 0.1, 0.05, 0.05))
 ```
-
-```{r}
-
-plot_map<- function(comm,feature,color_hex,title,ratio){
-  color_hex_min='#404040'
-  color_hex_max='#ca0020'
-  
-  data.comm<- comm@data %>% mutate(feature = ifelse(is.na(feature),mean(feature),feature))
-  data <- data.comm[,feature]
-
-  col <- findColours(classIntervals(
-            data, 10, style="quantile"),
-            smoothColors(color_hex_min,3,'white',2,color_hex_max))
-
-leg <- findColours(classIntervals(
-            round(data*ratio,0), 5, style="quantile"),
-            smoothColors(color_hex_min,3,'white',2,color_hex_max),
-            under="<", over=">", between="–",
-            cutlabels=FALSE)
-
-
-plot(frontieres, col="#FFFFFF")
-
-plot(europe,      col="#E6E6E6", border="#AAAAAA",lwd=1, add=TRUE)
-plot(frontieres,  col="#D8D6D4", lwd=6, add=TRUE)
-
-plot(frontieres,  col="#666666", lwd=1, add=TRUE)
-plot(comm,   col=col, border=col, lwd=.1,main=title,add=TRUE)
-plot(frontieres, col="#666666", lwd=1, add=TRUE)
-plot(frontieres,  col="#D8D6D4", lwd=6, add=TRUE)
-legend(-10000,6537500,fill=attr(leg, "palette"),
-    legend=gsub("\\.", ",", names(attr(leg,"table"))),
-    title = paste(title," :"),bty = "n",cex=1)
-  
-}
-```
-
-
-
-```{r fig.width=14, fig.height=12}
-
-plot_map(comm = comm,feature = 'LE.PEN',"#ca0020",'Le Pen Votes 2017 (%)',ratio=100)
-plot_map(comm = comm,feature = 'MACRON',"#ea4335",'Macron Votes 2017 (%)',ratio=100)
-plot_map(comm = comm,feature = 'education_SUP_ratio',"#0C3269",'% of university degree in active population (2013)',ratio=100)
-plot_map(comm = comm,feature = 'education_CAPBEP_ratio',"#0C3269",'% of vocational degree in active population (2013)',ratio=100)
-plot_map(comm = comm,feature = 'Job_OUVRIER_ratio',"#a54a4a",'% of Worker amongst working population',ratio=100)
-plot_map(comm = comm,feature = 'Q3_Q1_ARR',"#317873",'Income IQR (Euros)',ratio=1)
-
-```
-
-# Filter on Regions :
-
-```{r}
-BRETAGNE <-c("53")
-HAUTS_DE_FRANCE<- c("32")
-PACA<-c("93")
-AUVERGNE_RHONE<-c("84")
-```
-
-```{r}
-plot_map_region<- function(comm,feature,color_hex,title,ratio){
-  color_hex_min='#404040'
-  color_hex_max=color_hex
-  
-  data.comm<- comm@data %>% mutate(feature = ifelse(is.na(feature),mean(feature),feature))
-  data <- data.comm[,feature]
-
-  col <- findColours(classIntervals(
-            data, 10, style="quantile"),
-            smoothColors(color_hex_min,3,'white',2,color_hex_max))
-
-leg <- findColours(classIntervals(
-            round(data*ratio,0), 5, style="quantile"),
-            smoothColors(color_hex_min,3,'white',2,color_hex_max),
-            under="<", over=">", between="–",
-            cutlabels=FALSE)
-
-plot(comm,   col=col, border='green', lwd=.1,main=title)
-plot(frontieres, col="#FFFFFF",,add=TRUE)
-
-plot(europe,      col="#E6E6E6", border="#AAAAAA",lwd=1, add=TRUE)
-plot(frontieres,  col="#D8D6D4", lwd=6, add=TRUE)
-
-plot(frontieres,  col="#666666", lwd=1, add=TRUE)
-
-plot(frontieres, col="#666666", lwd=1, add=TRUE)
-plot(frontieres,  col="#D8D6D4", lwd=6, add=TRUE)
-plot(comm,   col=col, border=col, lwd=.1,main=title,add=TRUE)
-legend("bottomleft",fill=attr(leg, "palette"),
-    legend=gsub("\\.", ",", names(attr(leg,"table"))),
-    title = paste(title," :"),bty = "n",cex=.5)
-  
-}
-```
-
-```{r}
-
-plot_reg<- function(region_code,comm){
- 
-  comm<- subset(comm, CODE_REG.x %in% region_code)
-  plot_map_region(comm = comm ,feature = 'LE.PEN',"#ca0020",'Le Pen Votes 2017 (%)',ratio=100)
-  plot_map_region(comm = comm ,feature = 'Z_MOYEN.x',"#0C3269",'Elevation (meters)',ratio=.1)
-  plot_map_region(comm = comm ,feature = 'X..Abs.Ins',"#ca0020",'Abstention (%)',ratio=1)
-  plot_map_region(comm = comm,feature = 'NoJob_all_ratio',"#0C3269",'Unemployment (%)',ratio=100)
-}
-```
-
-```{r}
-plot_reg(HAUTS_DE_FRANCE,comm)
-plot_reg(BRETAGNE,comm)
-plot_reg(PACA,comm)
-plot_reg(AUVERGNE_RHONE,comm)
-```
-
-
-```{r fig.width=14, fig.height=12}
-#add color for each candidate :
-df<-data.frame()
-candidate_colors <-  data.frame(best_candidate = levels(comm@data$best_candidate),color='grey')
-candidate_colors<- candidate_colors %>% mutate(color=ifelse(best_candidate=='MACRON','#ecad31',color))
-candidate_colors<- candidate_colors %>% mutate(color=ifelse(best_candidate=='LE.PEN','#767374',color))
-candidate_colors<- candidate_colors %>% mutate(color=ifelse(best_candidate=='FILLON','#1d88be',color))
-candidate_colors<- candidate_colors %>% mutate(color=ifelse(best_candidate=='MÉLENCHON','#ec6a56',color))
-candidate_colors<- candidate_colors %>% mutate(color=ifelse(best_candidate=='HAMON','#e97ba9',color))
-candidate_colors<- candidate_colors %>% mutate(color=ifelse(best_candidate=='LASSALLE','#a9cfe2',color))
-
-## add color for each region :
-region_colors<- candidate_colors %>% mutate(color=ifelse(best_candidate=='LASSALLE','#a9cfe2',color))
-
-legend_colors<-candidate_colors %>% filter(color!=1)
-
-
-candidates_palette<-comm@data %>% select(best_candidate) %>% left_join(.,candidate_colors,by='best_candidate') 
-candidates_palette$color<-as.character(candidates_palette$color)
-
-plot(frontieres, col="#FFFFFF")
-
-plot(europe,      col="#E6E6E6", border="#AAAAAA",lwd=1, add=TRUE)
-plot(frontieres,  col="#D8D6D4", lwd=6, add=TRUE)
-
-plot(frontieres,  col="#666666", lwd=1, add=TRUE)
-
-plot(comm,col = candidates_palette$color,  lwd=.1,main='Presidential election 2017 - First Round',add=TRUE)
-plot(frontieres, col="#666666", lwd=1, add=TRUE)
-
-
-legend(-10000,6537500, inset=c(-0.000,0),legend = unique(legend_colors$best_candidate), fill=unique(legend_colors$color),bty = "n",cex=1)
-
-
-```
-
-
-
-
-
+`
