--- a/elections_france_cartograms.Rmd
+++ b/elections_france_cartograms.Rmd
@@ -71,14 +71,14 @@ dept_cartogram <- cartogram(departements, "Exprimés_total_voix", itermax=5)
 
 ```
 
-```{r}
+```{r fig.width=8, fig.height=8}
 # plot it
 tm_shape(dept_cartogram) + tm_fill("LE.PEN_ratio_voix_percent", style="quantile",palette="Reds" ,title = "LE PEN (%)") + 
   tm_borders() + tm_layout(frame=F)+ tm_credits("Related to population - Data @ Ministère de l'Intérieur", position = c("right", "bottom")) +tm_layout(title="First round", 
 	title.position = c("left", "top"), 
 	legend.position = c("left", "bottom"), 
 	frame = FALSE, 
-	inner.margins = c(0.1, 0.1, 0.05, 0.05))
+	inner.margins = c(0.1, 0.1, 0.05, 0.05))+tm_style_gray()
 
 # plot it
 tm_shape(dept_cartogram) + tm_fill("MACRON_ratio_voix_percent", style="quantile",palette="Blues", title = "MACRON (%)") + 
@@ -86,6 +86,6 @@ tm_shape(dept_cartogram) + tm_fill("MACRON_ratio_voix_percent", style="quantile"
 	title.position = c("left", "top"), 
 	legend.position = c("left", "bottom"), 
 	frame = FALSE, 
-	inner.margins = c(0.1, 0.1, 0.05, 0.05))
+	inner.margins = c(0.1, 0.1, 0.05, 0.05))+tm_style_gray()
 ```
 `
